= ludy changes history

== ludy 0.1.3, ?

* rename next_page to next, and prev_page to prev
* add Page#page to get the page number of that page.

== ludy 0.1.2, 2008.01.17

* aims to add functional stuffs, list comprehension is working in progress
* Paginator series are added.
* more rdocs are added.

== ludy 0.1.1, 2008.01.10

* add Array#tail and Array#map_with_index to make the task of
  template forward parameters work again. (without depend on facets)

* add some todo notes.

== ludy 0.1.0, 2008.01.08

* directory structure rearranged
    now you would like to require something like:
    require 'ludy/proc/bind'
    require 'ludy/lazy'
    require 'ludy/kernel/defun'
    require 'puzzle_generator'
    ...
    the load path is now manipulated by ludy.rb, with require guard,
    to make sure that all .rb is only required once. (all the same require path.)

* you can now:
    require 'ludy/kernel' # for all kernel method
    require 'ludy/all'    # for all ludy things

* there's no require_ludy anymore.

* project skeleton is now built through Mr Bones 1.3.0, see NOTICE

* many things are now deprecated. they are hard to implemented correctly,
  or useless, or easy to be replaced, or for some other reasons.

* ludy is now compatible with ruby 1.9. and a few ruby 1.9's features are
  now added in ludy to help improve compatibility between ruby versions.

* ludy executable is added. it simply call rake with ludy tasks, so:
    $ ludy test # to run all tests
    $ ludy doc  # generate rdoc
    $ ludy      # see all ludy tasks

* ludy_ext.rb is split into many other .rb

* C++ ERB meta-programming is added.

* multi re-implementation is done. the new one is called defun.
  it supports overloading(ad-hoc polymorphism), multi-method,
  pattern matching, and perhaps others?

* rdoc support is added.

* http://ludy.rubyforge.org would now insist on the latest rdoc.

* Array#reverse_map, Array#body, Array#rotate, Array#combos, etc. is added.

== ludy 0.0.9, 2008.01.07
