@@ -10,3 +10,5 @@
 
 * table showing, with pad.
 * rails multiple layout
+
+* better manifest creating
