@@ -2,8 +2,9 @@
 
 == ludy 0.1.3, ?
 
-* rename next_page to next, and prev_page to prev
-* add Page#page to get the page number of that page.
+* renamed next_page to next, and prev_page to prev
+* added Page#page to get the page number of that page.
+* added Ludy::eout to use in erb's block
 
 == ludy 0.1.2, 2008.01.17
 
